# jvm

kjvm/: CMakeLists.txt  ClassHeap.cpp  ClassHeap.h  ExecutionEngine.cpp  ExecutionEngine.h  JavaClass.cpp  ObjectHeap.cpp  kjvm.cpp  kjvm.h  logging.cpp  opcodes.h
kjvm/lib/: ExtensiveTest.java  NewOpsTest.java  Test.java
kjvm/tests/: test.cpp
